<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_folder_open"
        android:title="@string/open_file"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_date"
                    android:checked="true"
                    android:title="@string/sort_date" />
                <item
                    android:id="@+id/sort_name"
                    android:title="@string/sort_name" />
                <item
                    android:id="@+id/sort_duration"
                    android:title="@string/sort_duration" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
