<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="200"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_date"
                    android:checked="true"
                    android:title="@string/sort_date" />
                <item
                    android:id="@+id/sort_name"
                    android:title="@string/sort_name" />
                <item
                    android:id="@+id/sort_duration"
                    android:title="@string/sort_duration" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_grid"
        android:checkable="true"
        android:orderInCategory="205"
        android:title="グリッドで表示"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="210"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
